--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             padding: 20px; /* Adicionado padding */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra à volta do container */
             text-align: left; /* Alinhado à esquerda */
+            border-radius: 20px; /* Cantos curvos */
         }
 
         .header-container {
@@ -51,8 +52,9 @@
         }
 
         .name {
-            font-family: 'Baguette Script', cursive; /* Tipo de letra para o nome */
-            color: #162447; /* Cor do nome */
+            font-family: 'Arial Nova Cond Light', sans-serif; /* Tipo de letra para o nome */
+            letter-spacing: 3px; /* Espaçamento entre as letras */
+            color: #000; /* Cor do nome */
             font-size: 24px; /* Tamanho do nome */
             font-weight: bold; /* Negrito */
             margin-bottom: 0; /* Remover margem inferior */
@@ -166,51 +168,6 @@
                 <a href="https://www.instagram.com/seu_perfil_do_instagram"><i class="bi bi-instagram"></i></a>
                 <a href="https://github.com/seu_perfil_do_github"><i class="bi bi-github"></i></a>
                 <a href="https://www.linkedin.com/in/sara-virg%C3%ADnia-rocha/"><i class="bi bi-linkedin"></i></a>
-            </div>
-        </div>
-        <div class="chapter">
-            <h2><i class="bi bi-code-slash"></i> Trabalhos em HTML</h2>
-            <p>Texto de introdução sobre os trabalhos em HTML com 5 linhas.</p>
-            <!-- Adicione aqui os trabalhos em HTML -->
-            <div class="gallery">
-                <div class="gallery-item">
-                    <img src="caminho_para_a_foto_html_1.jpg" alt="Foto HTML 1">
-                    <p>Legenda da Foto HTML 1</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="caminho_para_a_foto_html_2.jpg" alt="Foto HTML 2">
-                    <p>Legenda da Foto HTML 2</p>
-                </div>
-            </div>
-        </div>
-        <div class="chapter">
-            <h2><i class="bi bi-lightning"></i> Trabalhos em PowerApp</h2>
-            <p>Texto de introdução sobre os trabalhos em PowerApp com 5 linhas.</p>
-            <!-- Adicione aqui os trabalhos em PowerApp -->
-            <div class="gallery">
-                <div class="gallery-item">
-                    <img src="icon_app_phone_PowerGymGirls.png" alt="foto app phone Power Gym Girls">
-                    <p>Legenda da Foto PowerApp 1</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="icon_app_tablet_PowerGymGirls.png" alt="foto app tablet Power Gym Girls">
-                    <p>Legenda da Foto PowerApp 2</p>
-                </div>
-            </div>
-        </div>
-        <div class="chapter">
-            <h2><i class="bi bi-bar-chart-line"></i> Trabalhos em Power BI</h2>
-            <p>Texto de introdução sobre os trabalhos em Power BI com 5 linhas.</p>
-            <!-- Adicione aqui os trabalhos em Power BI -->
-            <div class="gallery">
-                <div class="gallery-item">
-                    <img src="caminho_para_a_foto_powerbi_1.jpg" alt="Foto Power BI 1">
-                    <p>Legenda da Foto Power BI 1</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="caminho_para_a_foto_powerbi_2.jpg" alt="Foto Power BI 2">
-                    <p>Legenda da Foto Power BI 2</p>
-                </div>
             </div>
         </div>
     </div>
