--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   text-align: center;
   text-decoration: none;
   color: #000;
-  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0);
   margin: 0 30px;
   border-radius: 50%;
   position: relative;
@@ -212,14 +212,14 @@
                 <li><strong>Transformative Impact:</strong> Join me on this transformative journey as we harness the
                     power of technology to drive meaningful change and shape the future of urban development. Together,
                     we can leverage the Microsoft Power Platform to create smarter, more sustainable cities and
-                    communities.</li>
+                    communities</li>
             </ul>
+    </div>
+</body>
             <div class="intro-icons">
                 <!-- Ícones para redes sociais -->
         <a href=""><i class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
-    </div>
-</body>
 
 </html>
