--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
     <!-- redes sociais -->
-   <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <style>
         body {
@@ -43,7 +43,7 @@
             height: 150px;
             border-radius: 50%; /* Transforma a imagem em círculo */
             overflow: hidden;
-            margin: 0 auto 20px; /* Centraliza a imagem e dá margem inferior */
+            margin: 0 auto 10px; /* Centraliza a imagem e dá margem inferior */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra à volta da imagem */
         }
 
@@ -59,7 +59,7 @@
             color: #000; /* Cor do nome */
             font-size: 24px; /* Tamanho do nome */
             font-weight: bold; /* Negrito */
-            margin-bottom: 0; /* Remover margem inferior */
+            margin-bottom: 10px; /* Reduzindo margem inferior */
         }
 
         .intro {
@@ -130,54 +130,53 @@
         }
 
         .social-links {
-  display: flex;
-}
+            display: flex;
+        }
 
-.social-links a {
-  width: 80px;
-  height: 80px;
-  text-align: center;
-  text-decoration: none;
-  color: #000;
-  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0);
-  margin: 0 30px;
-  border-radius: 50%;
-  position: relative;
-  overflow: hidden;
-  transition: transform 0.5s;
-}
+        .social-links a {
+            width: 80px;
+            height: 80px;
+            text-align: center;
+            text-decoration: none;
+            color: #000;
+            box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0);
+            margin: 0 30px;
+            border-radius: 50%;
+            position: relative;
+            overflow: hidden;
+            transition: transform 0.5s;
+        }
 
-.social-links a .fab {
-  font-size: 30px;
-  line-height: 80px;
-  position: relative;
-  z-index: 10;
-  transition: color 0.5s;
-}
+        .social-links a .fab {
+            font-size: 30px;
+            line-height: 80px;
+            position: relative;
+            z-index: 10;
+            transition: color 0.5s;
+        }
 
-.social-links a::after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  top: -90px;
-  left: 0;
-  background: #000;
-  background: linear-gradient(-45deg, #ed1c94, #ffec17);
-  position: absolute;
-  transition: 0.5s;
-}
+        .social-links a::after {
+            content: '';
+            width: 100%;
+            height: 100%;
+            top: -90px;
+            left: 0;
+            background: #aed8e6; /* Alterando a cor de fundo */
+            position: absolute;
+            transition: 0.5s;
+        }
 
-.social-links a:hover::after {
-  top: 0;
-}
+        .social-links a:hover::after {
+            top: 0;
+        }
 
-.social-links a:hover .fab {
-  color: #fff;
-}
+        .social-links a:hover .fab {
+            color: #fff;
+        }
 
-.social-links a:hover {
-  transform: translateY(-10px);
-}
+        .social-links a:hover {
+            transform: translateY(-10px);
+        }
     </style>
 </head>
 
@@ -214,12 +213,12 @@
                     we can leverage the Microsoft Power Platform to create smarter, more sustainable cities and
                     communities</li>
             </ul>
+        </div>
+        <div class="intro-icons">
+            <!-- Ícones para redes sociais -->
+            <a href=""><i class="fab fa-linkedin-in" style="background-color: #aed8e6;"></i></a>
+        </div>
     </div>
 </body>
-            <div class="intro-icons">
-                <!-- Ícones para redes sociais -->
-        <a href=""><i class="fab fa-linkedin-in"></i></a>
-            </div>
-        </div>
 
 </html>
