--- a/index.html
+++ b/index.html
@@ -71,20 +71,6 @@
             margin-bottom: 20px; /* Adicionado margem inferior */
         }
 
-        .intro-icons {
-            text-align: center; /* Centralizar ícones */
-            margin-top: 20px; /* Margem superior */
-        }
-
-        .intro-icons a {
-            display: inline-block; /* Tornar ícones em linha */
-            margin-right: 20px; /* Margem entre os ícones */
-        }
-
-        .intro-icons a:last-child {
-            margin-right: 0; /* Remover margem do último ícone */
-        }
-
         .chapter {
             margin-top: 50px;
         }
@@ -114,19 +100,6 @@
             padding-bottom: 10px;
             margin-bottom: 20px;
             color: #000; /* Cor dos títulos dos capítulos */
-        }
-
-        .social-icons {
-            margin-top: 20px;
-        }
-
-        .social-icons a {
-            margin-right: 10px;
-            color: #003171; /* Cor dos ícones */
-        }
-
-        .social-icons a:hover {
-            color: #FFD700; /* Cor dos ícones ao passar o mouse */
         }
 
         .social-links {
@@ -214,7 +187,7 @@
                     communities</li>
             </ul>
         </div>
-        <div class="intro-icons">
+        <div class="social-links">
             <!-- Ícones para redes sociais -->
             <a href=""><i class="fab fa-linkedin-in" style="background-color: #aed8e6;"></i></a>
         </div>
