--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
         <div class="social-links">
             <!-- Ícones para redes sociais -->
-            <a href=""><i class="fab fa-linkedin-in" style="background-color: #aed8e6;"></i></a>
+            <a href=""><i class="fab fa-linkedin-in"></i></a>
         </div>
     </div>
 </body>
