--- a/index.html
+++ b/index.html
@@ -188,10 +188,15 @@
                     communities</li>
             </ul>
         </div>
-        <div class="social-links">
-            <!-- Ícones para redes sociais -->
-            <a href=""><i class="fab fa-linkedin-in"></i></a>
-        </div>
+
+      <div class="social-links">
+        <a href=""><i class="fab fa-facebook-f"></i></a>
+        <a href=""><i class="fab fa-instagram"></i></a>
+        <a href=""><i class="fab fa-twitter"></i></a>
+        <a href=""><i class="fab fa-github"></i></a>
+        <a href=""><i class="fab fa-linkedin-in"></i></a>
+      </div>
+
     </div>
 </body>
 
