--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   top: -90px;
   left: 0;
   background: #000;
-  background: linear-gradient(-45deg, #ed1c94, #ffec17);
+  background: rgba(173, 216, 230, 0.8);
   position: absolute;
   transition: 0.5s;
 }
