--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra à volta do container */
             text-align: left; /* Alinhado à esquerda */
             border-radius: 20px; /* Cantos curvos */
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra à volta da imagem */
         }
 
         .header-container {
@@ -104,6 +105,7 @@
 
         .social-links {
   display: flex;
+text-align: center;
 }
 
 .social-links a {
