--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ text-align: center;
   background: rgba(173, 216, 230, 0.8);
   position: absolute;
   transition: 0.5s;
+text-align: center;
 }
 
 .social-links a:hover::after {
