--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ text-align: center;
         </div>
 
       <div class="social-links">
-        <a href=""><i class="fab fa-linkedin-in"></i></a>
+        <a href=""><i class="fab fa-linkedin-in" style="text-align: center"></i></a>
       </div>
 
     </div>
