--- a/index.html
+++ b/index.html
@@ -192,9 +192,14 @@ text-align: center;
             </ul>
         </div>
 
-      <div class="social-links">
-        <a href=""><i class="fab fa-linkedin-in" style="text-align: center"></i></a>
-      </div>
+
+<div style="text-align: center;">
+        <div class="social-links" style="width: 200px; margin: auto;">
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <!-- Adicione aqui os outros ícones de redes sociais -->
+        </div>
+    </div>
+
 
     </div>
 </body>
